--- a/.github/workflows/docker-build-compose.yaml
+++ b/.github/workflows/docker-build-compose.yaml
@@ -16,3 +16,15 @@ jobs:
     - uses: actions/checkout@v3
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+      
+  compose:
+      
+    needs: build
+    runs-on: ubuntu-latest
+
+    steps:
+    # need checkout before using compose-action
+    - uses: actions/checkout@v3
+    - uses: isbang/compose-action@v1.4.1
+      with:
+        compose-file: "./docker-compose.yml"
